tests/fsharp/typeProviders/negTests/neg1_a.bsl

neg1_a.fsx(7,39,7,76): typecheck error FS3021: Unexpected exception from provided type 'FSharp.EvilProvider.TypeWhereGetInterfacesRaisesException' member 'GetInterfaces': The type provider 'Provider.EvilProvider' reported an error: deliberate error for testing purposes

neg1_a.fsx(7,39,7,76): typecheck error FS3021: Unexpected exception from provided type 'FSharp.EvilProvider.TypeWhereGetInterfacesRaisesException' member 'GetInterfaces': The type provider 'Provider.EvilProvider' reported an error: deliberate error for testing purposes

neg1_a.fsx(7,39,7,76): typecheck error FS3004: The provided type 'FSharp.EvilProvider.TypeWhereGetInterfacesRaisesException' has member 'Boo' which has declaring type 'FSharp.EvilProvider.TheType'. Expected declaring type to be the same as provided type.

neg1_a.fsx(7,39,7,76): typecheck error FS3004: The provided type 'FSharp.EvilProvider.TypeWhereGetInterfacesRaisesException' has member 'Foo' which has declaring type 'FSharp.EvilProvider.TheType'. Expected declaring type to be the same as provided type.
